--- a/build.gradle
+++ b/build.gradle
@@ -18,12 +18,11 @@ repositories {
 }
 
 dependencies {
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
+    compile "org.apache.avro:avro:1.8.2"
+    
+	compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.8'	
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.8.8'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.8'    
 
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:28.0-jre'
-
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+    compileOnly('org.projectlombok:lombok:1.16.18')
 }
